# collectxyz-nft-contract

./: .gitignore  Cargo.toml  Developing.md  README.md  collectxyz_nft_contract.wasm
.circleci/: config.yml
.github/workflows/: release-artifacts.yml  test.yml
contracts/collectxyz-nft-contract/: Cargo.toml
contracts/collectxyz-nft-contract/examples/: schema.rs
contracts/collectxyz-nft-contract/schema/: execute_msg.json  move_params_response.json  query_msg.json  xyz_tokens_response.json
contracts/collectxyz-nft-contract/src/: contract.rs  contract_tests.rs  execute.rs  lib.rs  query.rs  state.rs
examples/: schema.rs
schema/: execute_msg.json  instantiate_msg.json  query_msg.json  xyz_tokens_response.json
src/: contract.rs  contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
stubs/getrandom/: Cargo.toml
stubs/getrandom/src/: error.rs  lib.rs
