[workspace]
members = ["packages/*", "contracts/*"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'


[patch.crates-io]
# getrandom (a transitive dependency of rsa) is not compatible with cosmwasm, so override
# it with a stub version of the library that does nothing at all.
getrandom = { path = "./stubs/getrandom" }